--- a/src/suit.scss
+++ b/src/suit.scss
@@ -1,29 +1,30 @@
-@import "reset";
-@import "colors";
-@import "box_model";
-@import "font_gibson";
+@import "variables";
+@import "includes";
 @import "fonts";
-@import "blur";
-@import "shadows";
 @import "icons";
-@import "borders";
+@import "box_model";
 @import "backgrounds";
+@import "borders";
 @import "buttons";
+@import "reset";
+@import "defaults";
+@import "grids";
+@import "inputs";
+@import "date_picker";
+@import "time_picker";
+@import "date_range";
+@import "typeahead";
+@import "slider";
 @import "tables";
-@import "nav";
-@import "tags";
-@import "alert_boxes";
 @import "tabs";
 @import "modals";
-@import "date_picker";
-@import "date_range";
-@import "components";
-@import "grids";
-@import "multi_select";
+@import "alert_boxes";
 @import "thumbnails";
-@import "graphs";
-@import "slider";
-@import "navigation";
 @import "loader";
-@import "typeahead";
-
+@import "graphs";
+@import "lines";
+@import "containers";
+@import "breadcrumbs";
+// @import "navigation";
+@import "header";
+@import "logo";
