--- a/src/_fonts.scss
+++ b/src/_fonts.scss
@@ -1,60 +1,42 @@
-////////////
-// Gibson //
-////////////
-@mixin font-gibson($weight: normal, $style: normal) {
-    font-family: 'Gibson';
-    @if $weight == light {
-        font-weight: 200;
-    } @elseif $weight == bold {
-        font-weight: 700;
-    } @elseif $weight == black {
-        font-weight: bold;
-    } @else {
-        font-weight: normal;
-    }
-
-    @if $style == italic {
-        font-style: italic;
-    } @else {
-        font-style: normal;
+//////////////////
+// GIBSON FONTS //
+//////////////////
+$fonts: (Gibson_Light, 200, normal),
+        (Gibson_LightIt, 200, italic),
+        (Gibson_Regular, normal, normal),
+        (Gibson_Italic, normal, italic),
+        (Gibson_SemiBold, 700, normal),
+        (Gibson_SemiboldIt, 700, italic),
+        (Gibson_Bold, bold, normal),
+        (Gibson_BoldItalic, bold, italic);
+@each $font-props in $fonts {
+    $font: nth($font-props, 1);
+    $weight: nth($font-props, 2);
+    $style: nth($font-props, 3);
+    @font-face {
+        font-family: 'Gibson';
+        src: url("fonts/#{$font}.eot");
+        src: url("fonts/#{$font}.eot?#iefix") format("embedded-opentype"), url("fonts/#{$font}.woff") format("woff"), url("fonts/#{$font}.ttf") format("truetype"), url("fonts/#{$font}.svg##{$font}") format("svg");
+        font-weight: $weight;
+        font-style: $style;
     }
 }
 
 ///////////
 // FONTS //
 ///////////
-
 .font-default{
     font-family: "Gibson", Arial, sans-serif;
-    // font-weight: normal;
     font-size: 13px;
 }
 .font-din{
 	font-family: "Gibson", "Helvetica Neue", Arial, sans-serif;
-	// font-weight:600;
 	font-size:13px;
-}
-
-//////////////////
-// TEXT HELPERS //
-//////////////////
-@mixin truncate() {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-}
-.truncate {
-    @include truncate();
-}
-
-.ws-nowrap{
-    white-space: nowrap;
 }
 
 //////////////////
 // FONT WEIGHTS //
 //////////////////
-
 .fst-lighter, a.fst-lighter{
     @include font-gibson(light);
 }
@@ -117,10 +99,11 @@ $font-sizes: 13 14 16 21 30;
 .tt-capitalize-hover:hover{ text-transform:capitalize; }
 .tt-lowercase-hover:hover{ text-transform:lowercase; }
 
-///////////
-// LISTS //
-///////////
-.ls-none { list-style: none; }
+/////////////////////////
+// TEXT HELPERS //
+/////////////////////////
+.truncate { @include truncate(); }
+.ws-nowrap { white-space: nowrap; }
 
 ////////////////////
 // TEXT ALIGNMENT //
