--- a/src/_reset.scss
+++ b/src/_reset.scss
@@ -2,7 +2,8 @@
 /* CSS Document */
 /* Full Reset */
 html, body{
-    @extend .font-default;
+    @include font-gibson();
+    font-size: 13px;
 }
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -13,8 +14,8 @@ b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
 menu, nav, output, ruby, section, summary,
 time, mark, audio, video, button {
     font: inherit;
@@ -28,11 +29,12 @@ time, mark, audio, video, button {
     -moz-osx-font-smoothing: grayscale;
 }
 body{
-    @extend .font-default;
+    @include font-gibson();
+    font-size: 13px;
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
+article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
@@ -40,7 +42,7 @@ select{
     -webkit-appearance:none;
 }
 input::-moz-focus-inner /*Remove button padding in FF*/
-{ 
+{
     border: 0;
     padding: 0;
 }
