continue complete refactor in order to reduce size and ie 9 compatibility

--- a/src/_breadcrumbs.scss
+++ b/src/_breadcrumbs.scss
@@ -19,7 +19,7 @@
             line-height: 50px;
             max-width: 221px;
 
-            > a:not(.btn-icon-blue){
+            > a:not(.btn-icon){
                 display: block;
                 @include truncate();
                 height: 50px;
