--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -78,7 +78,7 @@
     @extend .btn;
     background-color: $lightest-grey;
     color: $medium-grey;
-    @include border($lightest-grey);
+    @include border($light-grey);
     text-decoration: none;
     opacity: 1;
     padding: 0 20px;
@@ -120,6 +120,7 @@
     }
     .btn-icon.#{$key}:hover{
         @include border($value);
+        color: $white;
         background-color: $value;
     }
     .btn-toggle.#{$key}, .btn-toggle.#{$key}{
