continue complete refactor in order to reduce size and ie 9 compatibility

--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -83,6 +83,7 @@
     opacity: 1 !important;
     padding: 0 20px !important;
     line-height: 34px !important;
+    cursor: default !important;
 }
 .btn-icon[disabled]{
     padding: 0 10px;
