fix time picker selected value

--- a/src/_time_picker.scss
+++ b/src/_time_picker.scss
@@ -126,7 +126,8 @@
         $g: nth($color, 4);
         $b: nth($color, 5);
 
-        &.#{$key} > ul > li:hover, &.ui-timepicker-selected {
+        &.#{$key} > ul > li{
+            &:hover, &.ui-timepicker-selected {
             background-color: $value;
         }
     }
