fix time picker selected value

--- a/src/_time_picker.scss
+++ b/src/_time_picker.scss
@@ -128,7 +128,8 @@
 
         &.#{$key} > ul > li{
             &:hover, &.ui-timepicker-selected {
-            background-color: $value;
+                background-color: $value;
+            }
         }
     }
 }
