fix time picker selected value

--- a/src/_time_picker.scss
+++ b/src/_time_picker.scss
@@ -129,6 +129,7 @@
         &.#{$key} > ul > li{
             &:hover, &.ui-timepicker-selected {
                 background-color: $value;
+                color: $white;
             }
         }
     }
