fix date range active state

--- a/src/_date_range.scss
+++ b/src/_date_range.scss
@@ -10,10 +10,19 @@
             left: -33px;
         }
     }
+
     &:hover, &:focus{
         .date-picker-trigger{
             @include border($medium-grey);
             color: $darkest-grey;
+        }
+    }
+
+    .date-picker.active {
+        &:hover, &:focus{
+            .date-picker-trigger{
+                color: $white;
+            }
         }
     }
 
