--- a/src/_date_range.scss
+++ b/src/_date_range.scss
@@ -22,6 +22,7 @@
         &:hover, &:focus{
             .date-picker-trigger{
                 color: $white;
+                @include border($medium-grey);
             }
         }
     }
