fix date range active state

--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -144,7 +144,7 @@
         box-shadow: none !important;
     }
 
-    &:hover { background-color: $white; }
+    tr:hover { background-color: $white; }
 }
 
 
