fix date range active state

--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -177,6 +177,7 @@
             // some !importants are used just because they are used on the original
             // Pikadate css. There's no other way to override them.
             .pika-button:hover {
+                color: white;
                 background-color: rgba($r, $g, $b, 1) !important;
             }
         }
