fix date range active state

--- a/src/_date_picker.scss
+++ b/src/_date_picker.scss
@@ -76,6 +76,7 @@
 
         &.#{$key}.active {
             .date-picker-trigger {
+                color: $white;
                 background-color: $value;
             }
         }
@@ -177,7 +178,6 @@
             // some !importants are used just because they are used on the original
             // Pikadate css. There's no other way to override them.
             .pika-button:hover {
-                color: white;
                 background-color: rgba($r, $g, $b, 1) !important;
             }
         }
