added an index page and updated the width of the vertical tab component

--- a/src/_tabs.scss
+++ b/src/_tabs.scss
@@ -58,6 +58,7 @@
     //////////////
     .suit-tab-vertical {
         padding: 0;
+        width: 252px;
         a.suit-tab-link{
             background-color: $lightest-grey;
             @include border($light-grey, 'top');
