--- a/src/_inputs.scss
+++ b/src/_inputs.scss
@@ -88,6 +88,7 @@ form > label:first-of-type{
     &:hover{
         background-position-y: -74px;
     }
+    -webkit-appearance: none;
     &::-webkit-search-cancel-button{
         -webkit-appearance: none;
     }
