84791200 fixed toggle button css bug

--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -105,6 +105,7 @@
     $value: nth($color, 2);
     .btn-primary.#{$key} {
         background-color: $value;
+        color: $white;
         @include border($value);
     }
     .btn-secondary.#{$key}{
@@ -138,6 +139,3 @@
         }
     }
 }
-
-
-
