--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -15,8 +15,7 @@
 .btn-primary {
     @extend .btn;
     color: $white;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
     background-color: $dark-grey;
     @include border($dark-grey);
     opacity: 0.9;
@@ -37,8 +36,7 @@
 .btn-secondary:hover{
     background-color: $dark-grey;
     color: $white;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding: 0 20px;
     text-decoration: none;
 }
 .btn-icon{
@@ -48,14 +46,11 @@
     color: $dark-grey;
     @include border($dark-grey);
     padding: 0 10px;
-    line-height: 34px;
 }
 .btn-icon:hover{
     @include border($dark-grey);
     background-color: $dark-grey;
     color: $white;
-    padding-left: 10px;
-    padding-right: 10px;
     text-decoration: none;
 }
 .btn-toggle {
@@ -65,11 +60,9 @@
     color: $dark-grey;
     @include border($dark-grey);
     padding: 0 20px;
-    line-height: 34px;
 }
 .btn-toggle.active, .btn-toggle.active:hover{
     @extend .btn-primary;
-    line-height: 34px;
 }
 .btn-primary[disabled], .btn-secondary[disabled], .btn-icon[disabled],
 .btn-primary.disabled, .btn-secondary.disabled, .btn-icon.disabled,
@@ -82,14 +75,12 @@
     text-decoration: none !important;
     opacity: 1 !important;
     padding: 0 20px !important;
-    line-height: 34px !important;
     cursor: default !important;
 }
 .btn-icon[disabled]{
     padding: 0 10px;
 }
 .btn-link{
-    line-height: 36px;
     padding: 10px;
     color: $dark-grey;
     opacity: .9;
