--- a/src/_graphs.scss
+++ b/src/_graphs.scss
@@ -44,9 +44,13 @@ g.nv-axis {
         background-color: rgba(0,0,0,0.8);
         color: white;
         table {
+            background-color: transparent;
             width: 100%;
-            tbody td.value {
-                font-weight: 200;
+            tbody {
+                background-color: transparent;
+                td.value {
+                    font-weight: 200;
+                }
             }
         }
     }
