CCUI-334: Set white-space attribute for tooltips to respect line breaks

--- a/src/_tooltips.scss
+++ b/src/_tooltips.scss
@@ -13,6 +13,7 @@
 }
 .tooltip-content {
     text-align: left;
+    white-space: pre-line;
     background-color: $red;
     color: $white;
     padding: 7px 15px;
